# trade-pipeline-skill

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  README_DEV.md  README_EN.md  README_RU.md  pyproject.toml  requirements.txt
.claude-plugin/: plugin.json
.claude/skills/trade-pipeline-run/: SKILL.md
docs/: adversarial-review-2607-crosscheck.md  adversarial-review-2607.md
examples/: sample_inquiry_rockfall.xlsx
tests/: test_amounts.py  test_buyer_matcher.py  test_canonicalizer.py  test_extractor.py  test_llm_parser_fallback.py  test_uuid_anchor.py  test_validation.py  test_writers.py
trade_pipeline/config/: config.yaml
trade_pipeline/extractors/: excel_extractor.py
trade_pipeline/models/: amounts.py  order_model.py
trade_pipeline/pipeline/: main.py  price_updater.py
trade_pipeline/understanding/: assembler.py  buyer_matcher.py  canonicalizer.py  llm_parser.py
trade_pipeline/validation/: cross_doc.py
trade_pipeline/writers/: base_writer.py  ci_writer.py  pi_writer.py  pl_writer_lite.py  quote_writer.py
