[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trade-pipeline-skill"
version = "1.3.0"
description = "AI-powered foreign trade document pipeline (Skill edition): RFQ → Quotation → PI → CI → PL"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1.0,<4",
    "pyyaml>=6.0,<7",
]

[project.optional-dependencies]
llm = ["anthropic>=0.40.0,<2"]
test = ["pytest>=7.0,<9", "pytest-cov>=4.0,<7", "ruff>=0.4.0,<1"]
dev = [
    "anthropic>=0.40.0,<2",
    "pytest>=7.0,<9",
    "pytest-cov>=4.0,<7",
    "ruff>=0.4.0,<1",
]

[project.scripts]
trade-pipeline = "trade_pipeline.pipeline.main:main"

[tool.setuptools.packages.find]
include = ["trade_pipeline*"]

[tool.setuptools.package-data]
trade_pipeline = ["config/*.yaml"]

[tool.ruff]
line-length = 100
target-version = "py311"
